--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,11 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     strategy:
       max-parallel: 4
       matrix:
         python-version: [3.11]
+        os: ["ubuntu-latest","windows-latest"]
 
     steps:
     - uses: actions/checkout@v4
