--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,9 +25,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
+    - name: Run Testsx`
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         DEBUG: False
       run: |
         python manage.py test
+
+    - name: Build and publish docker image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+         image: abdlmd/testapp
+         registry: docker.io
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    
