--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.11]
-        os: ["ubuntu-latest"
+        os: ["ubuntu-latest"]
 
     steps:
     - uses: actions/checkout@v4
